--- a/styles/variables.less
+++ b/styles/variables.less
@@ -483,9 +483,9 @@
 @lime-card-duration-line-height-large: 70px;
 @lime-card-duration-padding: var(--primitive-spacing-6) var(--primitive-spacing-12);
 @lime-card-label-container-spacing: var(--primitive-spacing-12);
+@lime-card-label-icon-margin: var(--primitive-spacing-6);
 @lime-card-label-line-height: 60px;
 @lime-card-label-line-height-large: 70px;
-@lime-card-labels-spacing: var(--primitive-spacing-6);
 @lime-card-split-caption-label-padding: 0 var(--primitive-spacing-48);
 @lime-card-split-caption-lower-label-padding: var(--primitive-spacing-18);
 @lime-card-vertical-captions-padding: var(--primitive-spacing-36) 0;
